--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.0",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "method-override": "^2.3.7",
     "mongoose": "^4.7.2",
     "morgan": "~1.7.0",
     "pug": "~2.0.0-beta6",
