--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.0",
+    "bluebird": "^3.4.7",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "jsonwebtoken": "^7.2.1",
     "method-override": "^2.3.7",
     "mongoose": "^4.7.2",
     "morgan": "~1.7.0",
